Angelina. Caelum. Schedule. Some fixes.

--- a/speakers/angelina.html
+++ b/speakers/angelina.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>Zeno Rocha - BrazilJS 2013</title>
-        <meta name="description" content="BrazilJS Conf 2013 - Zeno Rocha" />
+        <title>Angelina Fabbro- BrazilJS 2013</title>
+        <meta name="description" content="BrazilJS Conf 2013 - Angelina Fabbro" />
         <meta name="author" content="marimbondo.me - Web com gominho :)" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png" />
         <link rel="icon" href="../facebook.png" type="image/x-icon">        
@@ -21,29 +21,29 @@
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="css/context.css" />
         <link type="text/plain" rel="author" href="../humans.txt" />
-        <link rel="canonical" href="http://braziljs.com.br/speakers/zeno.html" />
+        <link rel="canonical" href="http://braziljs.com.br/speakers/angelina.html" />
 
         <!--[if lt IE 9]>
                 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
         <!-- OPEN GRAPH -->
-        <meta property="og:url" content="http://braziljs.com.br/speakers/zeno.html" />
+        <meta property="og:url" content="http://braziljs.com.br/speakers/angelina.html" />
         <meta property="og:type" content="Website" /> 
-        <meta property="og:title" content="Zeno Rocha - BrazilJS 2013" /> 
+        <meta property="og:title" content="Angelina Fabbro - BrazilJS 2013" /> 
         <meta property="og:image" content="http://braziljs.com.br/facebook.png" /> 
-        <meta property="og:description" content="Eu vou assistir a palestra de Zeno Rocha na BrazilJS Conf - 2013!" />
-		<meta property="fb:admins" content="1114477480" /> 
-		<meta property="fb:app_id" content="136223956547034" /> 
+        <meta property="og:description" content="Eu vou assistir a palestra da Angelina Fabbro na BrazilJS Conf - 2013!" />
+		<meta property="fb:admins" content="1114477480" />
+		<meta property="fb:app_id" content="136223956547034" />
 		<meta property="og:site_name" content="BrazilJS Conference" />
 
     </head>
-    <body class="zeno">
-    	<div class="wrapper">    		
+    <body class="angelina">
+    	<div class="wrapper">
 			<div id="speakers">
 				<div class="speakers-wrapper">
 					<span class="burst">&nbsp;</span>
-					<span class="speaker ir">Olá meu nome é Zeno Rocha</span>
+					<span class="speaker ir">Olá meu nome é Angelina Fabbro</span>
 					<div class="ballons">
 						<span class="calling what">vem ver minha palestra...</span>
 						<span class="calling where">... na <b>brazilJs conf!!</b></span>
@@ -54,32 +54,29 @@
 			</div>
 			<div class="speaker-info">
 				<div class="info-container">
-					<h1 class="name" itemprop="name">Zeno Rocha</h1>
-					<strong class="company" itemprop="worksFor">Liferay</strong>					
+					<h1 class="name" itemprop="name">Angelina Fabbro</h1>
+					<strong class="company" itemprop="worksFor">Mozilla</strong>					
 				</div>
 				<div id="social-networks">
 					<strong class="like-it ir ico-general">Curtiu? Compartilha!</strong>
 					<ul>
-						<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/zeno.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
-						<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/zeno" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
+						<li><div class="fb-like" data-href="http://braziljs.com.br/speakers/angelina.html" data-send="false" data-layout="box_count" data-width="72" data-show-faces="false"></div></li>
+						<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://braziljs.com.br/speakers/angelina.html" data-via="braziljs" data-lang="en" data-count="vertical">Tweet</a></li>
 						<li><div class="g-plusone" data-size="tall"></div></li>
 					</ul>
 				</div>
 				<div class="description" itemprop="description">
-					<p>Zeno Rocha já palestrou na HTML5DevConf em São Francisco, JAX Conf em Frankfurt e muitos outros eventos. Trabalhou como engenheiro de software na Petrobras e desenvolvedor front-end no Globoesporte.com.</p>
-					<p>Hoje, com 22 anos, trabalha como front-end engineer na Liferay. Com diversos projetos open source como Browser Diet e jQuery Boilerplate, é um dos top 20 usuários mais ativos do GitHub.</p>
-				    <p>Além disso, escreve artigos para Smashing Magazine, é apresentador do podcast Zone Of Front-Enders e co-foundador da BrazilJS Foundation.</p>
+                    <p>Angelina trabalha na Mozilla no projeto Firefox OS como desenvolvedora e technical evangelist.</p>
+                    <p>Antes disso, ela trabalhou na Steam Clock Software, e na faculdade cursou Cognitive Science na Simon Fraser University.</p>
+                    <p>Ela também foi indicada como 'Brilliant Newcomer' de 2013 pelo .net Awards.</p>
 				</div>
 				<h2 class="find-me">Nas redes sociais:</h2>
 				<ul class="my-social-links">
 					<li>
-						<a class="github" href="http://github.com/zenorocha" title="Acesse o gitHub de Zeno Rocha">github</a>
+						<a class="twitter" href="http://twitter.com/angelinamagnum" title="Acesse o Twitter de Angelina Fabbro">Twitter</a>
 					</li>
 					<li>
-						<a class="twitter" href="http://twitter.com/zenorocha" title="Acesse o Twitter de Zeno Rocha">Twitter</a>
-					</li>
-					<li>
-						<a class="blog" href="http://zenorocha.com/" title="Acesse o site pessoal de Zeno Rocha" itemprop="url">zenorocha.com</a>
+						<a class="blog" href="http://realityhacking.net/" title="Acesse o site pessoal de Angelina Fabbro" itemprop="url">realityhacking.net</a>
 					</li>															
 				</ul>
 				<a href="//www.braziljs.com.br" title="Home" class="home-container">
