Adding the treinaweb as supporter

--- a/en/index.html
+++ b/en/index.html
@@ -32,6 +32,9 @@
 		<meta property="fb:app_id" content="136223956547034" /> 
 		<meta property="og:site_name" content="BrazilJS Conference" />
 		
+		<meta itemprop="startDate" content="2013-09-22" />
+        <meta itemprop="endDate" content="2013-09-23" />
+		
         <link rel="alternate" hreflang="pt-br" href="http//braziljs.com.br" />		
 
     </head>
@@ -40,7 +43,7 @@
     		<span id="modal"></span>
     		<nav id="menu">
     			<span class="menu-switch ico-general">&nbsp;</span>
-    			<a class="language" href="//braziljs.com.br" title="Go to the portuguese version"><span class="ico-general ballon">PT</span></a>
+    			<a class="language" href="//braziljs.com.br" title="Vá para a versão em português!"><span class="ico-general ballon">PT</span></a>
     			<ul class="chapters-list">
     				<li class="speakers">
     					<a href="#heroes" title="Know more about our speakers"><span class="ir ico-general sign">Speakers</span></a>
@@ -1028,7 +1031,7 @@
 						<span class="pigies pig-1">&nbsp;</span>
 						<span class="pigies pig-2">&nbsp;</span>
 						<span class="pigies pig-3">&nbsp;</span>
-						<p class="disclaimer">Get your ticket for the biggest javascript conference in the universe. Unseen content, renowned speakers, and rich networking.</p>
+						<p class="disclaimer">Get your ticket for the largest javascript conference in the universe. Unseen content, renowned speakers, and rich networking.</p>
 						<a href="http://eventick.com.br/braziljs-2013" class="buy" title="Buy your ticket here!" rel="external">
 							<strong class="ttl-general ir">Buy your ticket!</strong>
 						</a>
@@ -1114,7 +1117,7 @@
                                 </li>                                
                             </ul>
                         </div>
-                        <p class="be-a-sponsor">Want to be part of our history? Be a #Braziljs sponsor to!<a href="mailto:contato@braziljs.org" title="Talk to us!"> Get in touch!</a></p>
+                        <p class="be-a-sponsor">Want to be part of our history? Be a #Braziljs sponsor too!<a href="mailto:contato@braziljs.org" title="Talk to us!"> Get in touch!</a></p>
                         <div class="supporters educational">
                             <h3 class="ir ttl-general">Educational support:</h3>
                             <ul>
@@ -1129,6 +1132,7 @@
                                 <li><a href="//www.abradi-rs.com.br" title="ABRADI-RS" class="abradi ir" rel="external">ABRADI-RS</a></li>
                                 <li><a href="//www.casadocodigo.com.br" rel="external" title="Casa do código - livros para o programador" class="casa-do-codigo ir">Casa do código</a></li>
                                 <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>
+                                <li><a href="//www.treinaweb.com.br/" rel="external" title="Cursos de TI - TreinaWeb cursos online" class="treinaweb ir">TreinaWeb</a></li>
                             </ul>
                         </div>                                               
                     </div>          				    
@@ -1149,13 +1153,13 @@
 							<p class="resume">Javascript enthusiast, <span itemprop="jobTitle">senior system analyst </span> at <span itemprop="worksFor">Terra Networks</span>, has 8 years of experience in web development, curator of BrazilJS and RSJS.</p>
 							<ul class="social-networks">
 								<li>
-									<a class="github ir ico-general" href="https://github.com/jaydson" title="Acesse o gitHub de Jaydson Gomes" rel="external">gitHub</a>
+									<a class="github ir ico-general" href="https://github.com/jaydson" title="Jaydson Gomes GitHub" rel="external">gitHub</a>
 								</li>
 								<li class="twitter">
-									<a class="twitter ir ico-general" href="https://twitter.com/jaydson" title="Acesse o twitter de Jaydson Gomes" rel="external">twitter</a>
+									<a class="twitter ir ico-general" href="https://twitter.com/jaydson" title="Jaydson Gomes Twitter" rel="external">twitter</a>
 								</li>
 								<li class="blog">
-									<a class="blog ir ico-general" href="http://jaydson.org" title="Acesse o Blog do Jaydson" rel="external">jaydson.org</a>
+									<a class="blog ir ico-general" href="http://jaydson.org" title="Jaydson's blog" rel="external">jaydson.org</a>
 								</li>
 							</ul>
 							<span class="photo">&nbsp;</span>
