Adding W3C and supperplayer

--- a/en/index.html
+++ b/en/index.html
@@ -1070,6 +1070,12 @@
                                     </strong>
                                     <p class="about">A global leader in wireless innovation, BlackBerry® revolutionized the mobile industry when it was introduced in 1999. Today, BlackBerry aims to inspire the success of our millions of customers around the world by continuously pushing the boundaries of mobile experiences. Founded in 1984 and based in Waterloo, Ontario, BlackBerry operates offices in North America, Europe, Asia Pacific and Latin America. BlackBerry is listed on the NASDAQ Stock Market (NASDAQ: BBRY) and the Toronto Stock Exchange (TSX: BB). For more information, visit www.blackberry.com</p>
                                 </li>
+                                <li class="w3c">
+                                    <strong class="sponsor">
+                                        <a href="//http://www.w3c.br" rel="external" title="visite o site da W3C Brasil" class="sponsors-general">W3C Brasil</a>    
+                                    </strong>                                    
+                                    <p class="about">The World Wide Web Consortium (W3C) is an international community that develops open standards to ensure the long-term growth of the Web.</p>
+                                </li>                                 
                             </ul>
                         </div>
                         <div class="sponsors gold">
@@ -1133,6 +1139,7 @@
                                 <li><a href="//www.casadocodigo.com.br" rel="external" title="Casa do código - livros para o programador" class="casa-do-codigo ir">Casa do código</a></li>
                                 <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>
                                 <li><a href="//www.treinaweb.com.br/" rel="external" title="Cursos de TI - TreinaWeb cursos online" class="treinaweb ir">TreinaWeb</a></li>
+                                <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
                             </ul>
                         </div>                                               
                     </div>          				    
