--- a/index.html
+++ b/index.html
@@ -1069,13 +1069,18 @@
                                     </strong>                                    
                                     <p class="about">Mozilla is a global, nonprofit organization dedicated to making the Web better. We emphasize principle over profit, and believe that the Web is a shared public resource to be cared for, not a commodity to be sold. We work with a worldwide community to create open source products like Mozilla Firefox, and to innovate for the benefit of the individual and the betterment of the Web. The result is great products built by passionate people and better choices for everyone.</p>
                                 </li>
-
                                 <li class="blackberry">
                                     <strong class="sponsor">
                                         <a href="http://br.blackberry.com/" rel="external" title="visite o site da BlackBerry" class="sponsors-general">BlackBerry</a>    
                                     </strong>                                    
                                     <p class="about">A global leader in wireless innovation, BlackBerry® revolutionized the mobile industry when it was introduced in 1999. Today, BlackBerry aims to inspire the success of our millions of customers around the world by continuously pushing the boundaries of mobile experiences. Founded in 1984 and based in Waterloo, Ontario, BlackBerry operates offices in North America, Europe, Asia Pacific and Latin America. BlackBerry is listed on the NASDAQ Stock Market (NASDAQ: BBRY) and the Toronto Stock Exchange (TSX: BB). For more information, visit www.blackberry.com</p>
-                                </li>
+                                </li>                                
+                                <li class="w3c">
+                                    <strong class="sponsor">
+                                        <a href="//http://www.w3c.br" rel="external" title="visite o site da W3C Brasil" class="sponsors-general">W3C Brasil</a>    
+                                    </strong>                                    
+                                    <p class="about">O Consórcio World Wide Web (W3C) é um consórcio internacional no qual organizações filiadas, uma equipe em tempo integral e o público trabalham juntos para desenvolver padrões para a Web. Liderado pelo inventor da web Tim Berners-Lee e o CEO Jeffrey Jaffe, o W3C tem como missão Conduzir a World Wide Web para que atinja todo seu potencial, desenvolvendo protocolos e diretrizes que garantam seu crescimento de longo prazo. Para mais informações, contate-nos.</p>
+                                </li>                                
                             </ul>
                         </div>
                         <div class="sponsors gold">
@@ -1139,6 +1144,7 @@
                                 <li><a href="//www.casadocodigo.com.br" rel="external" title="Casa do código - livros para o programador" class="casa-do-codigo ir">Casa do código</a></li>
                                 <li><a href="//getupcloud.com/" rel="external" title="Getup - Grow in the cloud" class="get-up ir">Getup</a></li>
                                 <li><a href="//www.treinaweb.com.br/" rel="external" title="Cursos de TI - TreinaWeb cursos online" class="treinaweb ir">TreinaWeb</a></li>
+                                <li><a href="//superplayer.fm/" rel="external" title="O Superplayer é a forma mais fácil e rápida de se encontrar a trilha sonora certa para cada momento do seu dia. Confira!" class="superplayer ir">Superplayer</a></li>
                             </ul>
                         </div>                                                
                     </div>          				    
